<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlyingShark</string>
    <string name="action_restart">Restart</string>
    <string name="hello_world">Hello world!</string>
    <string name="about">About</string>

    <string name="time_elapse">"Time: %1$.1fs"</string>
    <string name="game_over">Game Over!</string>
    <string name="start">Touch to start!</string>
    <string name="title_activity_menu">FlyingShark</string>
    <string name="game_settings">Game settings</string>
    <string name="category_key">category</string>
    <string name="category_default">Easy</string>
    <string name="category_title">Category</string>
    <string name="category_summary">Difficulty</string>
    <string name="vibration_settings">Vibration</string>
    <string name="sound_settings">Sound</string>
    <string name="preferences">Preferences</string>
    <string name="pref_sound_key">sound</string>
    <string name="pref_vibration_key">vibration</string>
    <bool name="pref_sound_default">true</bool>
    <bool name="pref_vibration_default">true</bool>
    <string name="pref_splash_title">Splash screen</string>
    <string name="pref_vibration_summary">Turn on/off vibration</string>
    <string name="pref_sound_summary">Turn on/off music</string>
    <string name="about_title">Rules of this game</string>
    <string name="about_msg">Avoid to touch those obstacles! If you fails to do, it will game over!</string>
    <string name="about_cleardata_title">Clear Highest Time Record</string>
    <string name="about_cleardata_msg">Your highest time record have been cleared!</string>
    <string name="highestTime">"Current Highest Time: %1$.1fs"</string>
    <string name="splash_text">Welcome to FlyingShark!!</string>
    <string name="touch_to_continue">Touch to continue</string>
    <string name="pref_splash_key">splash</string>
    <bool name="pref_splash_default">true</bool>
    <string name="pref_splash_summary">Display the splash screen when launching the game</string>
    <string-array name="category_names">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="category_values">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="mainmenu">
        <item>New game</item>
        <item>Preferences</item>
        <item>About</item>
        <item>Clear Highest Time Record</item>
    </string-array>
    <string-array name="resumemenu">
        <item>Resume</item>
        <item>About</item>
    </string-array>
</resources>
