<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_text" />

    <ImageView
        android:id="@+id/splash_monster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/app_name"
        android:src="@drawable/frontpage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/touch_to_continue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>